# lsp-server

./: Cargo.toml  README.md
.ci/assets/docs/: index.html
.github/workflows/: ci.yml
examples/: goto_def.rs
src/: error.rs  lib.rs  msg.rs  req_queue.rs  socket.rs  stdio.rs
xtask/src/: main.rs
