[package]
edition = "2018"
name = "lsp-server"
version = "0.3.2"
authors = ["rust-analyzer developers"]
repository = "https://github.com/rust-analyzer/lsp-server"
license = "MIT OR Apache-2.0"
description = "Generic LSP server scaffold."

[dependencies]
log = "0.4.3"
serde_json = "1.0.34"
serde = { version = "1.0.83", features = ["derive"] }
crossbeam-channel = "0.4"

[dev-dependencies]
lsp-types = "0.63.0"
flexi_logger = "0.14.0"
